--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>carnet2voyage</title>
     <link href="/src/index.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.typekit.net/XXXXXXX.css" />
   </head>
   <body>
     <div id="root"></div>
